    with the size of the reference automaton, and they now have a
    header line.  These log files give more details and are more
    accurate in the case of incremental SAT-solving.  The python
    bindings for sat_minimize() now have a display_log and return_log
    options; there are demonstrated on the new
    https://spot.lrde.epita.fr/ipynb/satmin.html page.

  Bugs fixed:

  - "autfilt --cobuchi --small/--det" would turn a transition-based
    co-Büchi automaton into a state-based co-Büchi.

  - Fix cryptic error message from Python's spot.translate() and
    spot.postprocess() when supplying conflicting arguments.

  - "autfilt -B --sat-minimize" was incorrectly producing
    transition-based automata.

  - Using spot.automata("cmd...|") to read just a few automata out of
    an infinite stream would not properly terminate the command.

  - The is_unambiguous() check (rewritten in Spot 2.2) could mark some
    unambiguous automata as ambiguous.

  - acc_cond::is_generalized_rabin() and
    acc_cond::is_generalized_streett() would segfault on weird
    acceptance conditions such as "3 t" or "3 f".

  - remove_fin() and streett_to_generalized_buchi() should never
    return automata with "f" acceptance.

  - "autfilt --acceptance-is=Fin-less" no longer accept automata
    with "f" acceptance.

  - twa_run methods will now diagnose cases where the cycle is
    unexpectedly empty instead of segfaulting.

  - spot::closure(), used by default for testing stutter-invariance,
    was using an optimization incorrect if the acceptance condition
    had some Fin(x).  Consequently stutter-invariance tests for
    automata, for instance with "autfilt --is-stutter-invariant",
    could be to be wrong (even if the input does not use Fin(x), its
    complement, used in the stutter-invariance test likely will).
    Stutter-invariance checks of LTL formulas are not affected.

New in spot 2.5.1 (2018-02-20)

  Library:
