@@ -89,6 +89,9 @@ New in spot 2.5.2 (2018-03-25)
 
   Bugs fixed:
 
+  - print_dot() will correctly escape strings containing \n in HTML
+    mode.
+
   - "autfilt --cobuchi --small/--det" would turn a transition-based
     co-Büchi automaton into a state-based co-Büchi.
 
